--- a/index.html
+++ b/index.html
@@ -22,119 +22,119 @@
     
     <div class="slider" id="story-gallery">
       <div class="slide">
-      <img src="/assets/images/foto_01.jpg" alt="Foto 1">
+      <img src="images/foto_01.jpg" alt="Foto 1">
       <p class="frase">Desde que llegaste, todo es más bonito. 💫</p>
     </div>
     <div class="slide">
-      <img src="/assets/images/foto_02.jpg" alt="Foto 2">
+      <img src="images/foto_02.jpg" alt="Foto 2">
       <p class="frase">Tu sonrisa es mi canción favorita. 🎶</p>
     </div>
     <div class="slide">
-      <img src="/assets/images/foto_03.jpg" alt="Foto 3">
+      <img src="images/foto_03.jpg" alt="Foto 3">
       <p class="frase">Contigo, cada momento es magia. ✨</p>
     </div>
     <div class="slide">
-      <img src="/assets/images/foto_04.jpg" alt="Foto 4">
+      <img src="images/foto_04.jpg" alt="Foto 4">
       <p class="frase">Eres mi casualidad favorita. 🌙</p>
     </div>
     <div class="slide">
-      <img src="/assets/images/foto_05.jpg" alt="Foto 5">
+      <img src="images/foto_05.jpg" alt="Foto 5">
       <p class="frase">Nosotros somos mi historia favorita. 📖</p>
     </div>
     <div class="slide">
-      <img src="/assets/images/foto_06.jpg" alt="Foto 6">
+      <img src="images/foto_06.jpg" alt="Foto 6">
       <p class="frase">Tú haces que mi corazón se sienta en casa. 🏡</p>
     </div>
     <div class="slide">
-      <img src="/assets/images/foto_07.jpg" alt="Foto 7">
+      <img src="images/foto_07.jpg" alt="Foto 7">
       <p class="frase">Amarte es mi aventura diaria. 🚀</p>
     </div>
     <div class="slide">
-      <img src="/assets/images/foto_08.jpg" alt="Foto 8">
+      <img src="images/foto_08.jpg" alt="Foto 8">
       <p class="frase">Nuestro amor es mi lugar feliz. 🥰</p>
     </div>
     <div class="slide">
-      <img src="/assets/images/foto_09.jpg" alt="Foto 9">
+      <img src="images/foto_09.jpg" alt="Foto 9">
       <p class="frase">Tú y yo, contra todo. ❤️</p>
     </div>
     <div class="slide">
-      <img src="/assets/images/foto_10.jpg" alt="Foto 10">
+      <img src="images/foto_10.jpg" alt="Foto 10">
       <p class="frase">Cada instante contigo vale oro. 💛</p>
     </div>
     <div class="slide">
-      <img src="/assets/images/foto_11.jpg" alt="Foto 11">
+      <img src="images/foto_11.jpg" alt="Foto 11">
       <p class="frase">Contigo descubrí lo que es el amor real. 🌹</p>
     </div>
     <div class="slide">
-      <img src="/assets/images/foto_12.jpg" alt="Foto 12">
+      <img src="images/foto_12.jpg" alt="Foto 12">
       <p class="frase">Tú haces latir mi corazón con fuerza. 💓</p>
     </div>
     <div class="slide">
-      <img src="/assets/images/foto_13.jpg" alt="Foto 13">
+      <img src="images/foto_13.jpg" alt="Foto 13">
       <p class="frase">Tenerte es tenerlo todo. ✨</p>
     </div>
     <div class="slide">
-      <img src="/assets/images/foto_14.jpg" alt="Foto 14">
+      <img src="images/foto_14.jpg" alt="Foto 14">
       <p class="frase">Eres el milagro más lindo que me ha pasado. 🙏</p>
     </div>
     <div class="slide">
-      <img src="/assets/images/foto_15.jpg" alt="Foto 15">
+      <img src="images/foto_15.jpg" alt="Foto 15">
       <p class="frase">Mis días favoritos siempre llevan tu nombre. 📅</p>
     </div>
     <div class="slide">
-      <img src="/assets/images/foto_16.jpg" alt="Foto 16">
+      <img src="images/foto_16.jpg" alt="Foto 16">
       <p class="frase">Nuestro amor no necesita filtros. 📸</p>
     </div>
     <div class="slide">
-      <img src="/assets/images/foto_17.jpg" alt="Foto 17">
+      <img src="images/foto_17.jpg" alt="Foto 17">
       <p class="frase">Me haces sentir como en un sueño. 🌈</p>
     </div>
     <div class="slide">
-      <img src="/assets/images/foto_18.jpg" alt="Foto 18">
+      <img src="images/foto_18.jpg" alt="Foto 18">
       <p class="frase">Contigo aprendí a volar sin alas. 🕊️</p>
     </div>
     <div class="slide">
-      <img src="/assets/images/foto_19.jpg" alt="Foto 19">
+      <img src="images/foto_19.jpg" alt="Foto 19">
       <p class="frase">Cada mirada tuya ilumina mi alma. 🔥</p>
     </div>
     <div class="slide">
-      <img src="/assets/images/foto_20.jpg" alt="Foto 20">
+      <img src="images/foto_20.jpg" alt="Foto 20">
       <p class="frase">Amor, tú haces que todo valga la pena. 💘</p>
     </div>
     <div class="slide">
-      <img src="/assets/images/foto_21.jpg" alt="Foto 21">
+      <img src="images/foto_21.jpg" alt="Foto 21">
       <p class="frase">Si existes tú, no necesito más. 💞</p>
     </div>
     <div class="slide">
-      <img src="/assets/images/foto_22.jpg" alt="Foto 22">
+      <img src="images/foto_22.jpg" alt="Foto 22">
       <p class="frase">Tus abrazos son mi lugar seguro. 🤗</p>
     </div>
     <div class="slide">
-      <img src="/assets/images/foto_23.jpg" alt="Foto 23">
+      <img src="images/foto_23.jpg" alt="Foto 23">
       <p class="frase">Tú haces de mis días poesía. 📝</p>
     </div>
     <div class="slide">
-      <img src="/assets/images/foto_24.jpg" alt="Foto 24">
+      <img src="images/foto_24.jpg" alt="Foto 24">
       <p class="frase">Tú eres mi presente, mi futuro, mi todo. ⏳</p>
     </div>
     <div class="slide">
-      <img src="/assets/images/foto_25.jpg" alt="Foto 25">
+      <img src="images/foto_25.jpg" alt="Foto 25">
       <p class="frase">Nuestro amor es eterno. ♾️</p>
     </div>
     <div class="slide">
-      <img src="/assets/images/foto_26.jpg" alt="Foto 26">
+      <img src="images/foto_26.jpg" alt="Foto 26">
       <p class="frase">Me haces sentir única. 💐</p>
     </div>
     <div class="slide">
-      <img src="/assets/images/foto_27.jpg" alt="Foto 27">
+      <img src="images/foto_27.jpg" alt="Foto 27">
       <p class="frase">Tú y yo, para siempre. 🔐</p>
     </div>
     <div class="slide">
-      <img src="/assets/images/foto_28.jpg" alt="Foto 28">
+      <img src="images/foto_28.jpg" alt="Foto 28">
       <p class="frase">El amor de mi vida tiene tu nombre: Yecner 💌</p>
     </div>
     <div class="slide">
-      <img src="/assets/images/foto_29.jpg" alt="Foto 29">
+      <img src="images/foto_29.jpg" alt="Foto 29">
       <p class="frase">Feliz cumpleaños, mi Amor. Gracias por existir. 🎂❤️</p>
     </div>
     
@@ -149,7 +149,7 @@
 
   <div id="video-section" style="display: none; margin-top: 1rem;">
     <video id="romantic-video" controls>
-      <source src="/assets/video/ssstik.io_@doris.cajamarca01_1745806773435.mp4" type="video/mp4">
+      <source src="video/ssstik.io_@doris.cajamarca01_1745806773435.mp4" type="video/mp4">
       Tu navegador no soporta el video.
     </video>
     <button id="close-video-button" class="video-btn close">❌ Cerrar video</button>
@@ -166,7 +166,7 @@
 </section>
 
 
-  <script src="/script.js"></script>
+  <script src="script.js"></script>
   <script>
     function crearCorazon() {
       const corazon = document.createElement('div');
